// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalDefaultCard should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          hasTitleAndSummary={false}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1.5,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "paddingBottom": 24,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should render a loading state with isLoading 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          hasTitleAndSummary={true}
          isLoading={true}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 2,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "paddingBottom": 24,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginTop": 8,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should render with a summary 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          hasTitleAndSummary={true}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 2,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "paddingBottom": 24,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
        <Text
          bold={false}
          hasTitle="Are you telling me that you built a time machine out of a DeLorean?"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
              "paddingTop": 8,
            }
          }
        >
          The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should render with a title 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          hasTitleAndSummary={false}
          isLoading={true}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1.5,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "paddingBottom": 24,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should should render a like icon 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          hasTitleAndSummary={false}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1.5,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "paddingBottom": 24,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
      </View>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 16,
            "top": 16,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          height={24}
          isLiked={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>,
]
`;

exports[`HorizontalDefaultCard should should render as isLiked 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    inHorizontalList={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "height": 240,
        "margin": 8,
        "marginBottom": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
        "width": 240,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <Image
          fadeDuration={250}
          hasTitleAndSummary={false}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://picsum.photos/800/1600/?random",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1.5,
              "backgroundColor": "#A5A5A5",
              "resizeMode": "cover",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "paddingBottom": 24,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
      </View>
      <View
        style={
          Object {
            "position": "absolute",
            "right": 16,
            "top": 16,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          height={24}
          isLiked={true}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>,
]
`;
